# prior2do

./: LICENSE  README.md  asset-manifest.json  index.html  service-worker.js  service-worker.js.map
.github/workflows/: build-docker-images.yml  code-linting.yml  publish-to-github-pages.yml  update-helm-repo.yml
backend/: .pylintrc  Dockerfile  pyproject.toml
backend/src/: env.py  exceptions.py  main.py  schema.py
backend/src/neo4j_client/: base.py  tasks.py  users.py
backend/src/routers/: auth.py  tasks.py  work_session.py
backend/src/services/: auth.py
deployment/: docker-compose.yml
deployment/chart/: Chart.yaml  values.yaml
deployment/chart/charts/: neo4j-5.3.0.tgz
deployment/chart/templates/: deployment.yaml  service.yaml
deployment/helm-repo/: index.yaml  prior2do-0.1.0.tgz  prior2do-0.1.1.tgz
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: Const.ts  i18n.ts  index.css  index.tsx
frontend/src/Const/: Const.ts
frontend/src/Controller/: Accounts.ts  InExports.ts  Issues.ts  Settings.ts  Tags.ts  Tasks.ts  Uuid.ts  WorkSessions.ts
frontend/src/Data/: Timestamps.ts  schemas.ts
frontend/src/Presentation/: CommonView.tsx
frontend/src/locales/: ch.json  en.json
frontend/src/pages/: CommonView.tsx
static/css/: main.bc537f1a.css  main.bc537f1a.css.map
static/js/: main.83e6443b.js  main.83e6443b.js.map  main.9e6c403e.js  main.9e6c403e.js.LICENSE.txt  main.9e6c403e.js.map  main.ce32ec12.js  main.ce32ec12.js.map  main.f42b3e8c.js  main.f42b3e8c.js.LICENSE.txt
(+97 files in other folders)
